--- a/Hippo/UIView/CustomViews/NavigationTitleView/NavigationTitleView.xib
+++ b/Hippo/UIView/CustomViews/NavigationTitleView/NavigationTitleView.xib
@@ -21,7 +21,7 @@
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JME-s4-Q5V">
                             <rect key="frame" x="0.0" y="0.0" width="416" height="30"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WVG-Bv-USx">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WVG-Bv-USx">
                                     <rect key="frame" x="0.0" y="0.0" width="28" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="28" id="eDj-EV-LHX"/>
