--- a/Hippo/UIView/CustomViews/NavigationTitleView/NavigationTitleView.xib
+++ b/Hippo/UIView/CustomViews/NavigationTitleView/NavigationTitleView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="NavigationTitleView" id="iN0-l3-epB" customClass="NavigationTitleView" customModule="HippoChat" customModuleProvider="target">
+        <view contentMode="scaleToFill" restorationIdentifier="NavigationTitleView" id="iN0-l3-epB" customClass="NavigationTitleView" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="416" height="163"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -21,7 +21,7 @@
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JME-s4-Q5V">
                             <rect key="frame" x="0.0" y="0.0" width="416" height="30"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WVG-Bv-USx">
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WVG-Bv-USx">
                                     <rect key="frame" x="0.0" y="0.0" width="28" height="30"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="28" id="eDj-EV-LHX"/>
